Добавил стили для печати

--- a/src/pug/sections/_extra-info.pug
+++ b/src/pug/sections/_extra-info.pug
@@ -2,8 +2,8 @@ section.extra-info
     .extra-info__container.container
         .extra-info__header
             h2.extra-info__title.title--s Дополнительная информация
-            span.divider
-            button.extra-info__button
+            span.divider.no-print
+            button.extra-info__button.no-print
                 span.extra-info__button-icon
         .extra-info__wrapper.extra-info__wrapper--open
             article.extra-info__card.extra-info__employment.employment.card--stack
