--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,4 +1,4 @@
-footer.footer
+footer.footer.no-print
     .footer__container.container
         .footer__section
             h2.footer__section-title.title Контакты
