--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,4 +1,4 @@
-header.page-header.js-header
+header.page-header.js-header.no-print
     .overlay#overlay-modal
     .page-header__wrapper.container
         .page-header__sidebar
