--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -1,4 +1,4 @@
-section.portfolio
+section.portfolio.no-print
     .portfolio__container.card--stack
         h2.portfolio__title.title Цифровой профиль
         .portfolio__wrapper
