--- a/src/pug/sections/_science-work.pug
+++ b/src/pug/sections/_science-work.pug
@@ -5,7 +5,7 @@ mixin table
                 th.table-scroll__title Наименование учебной дисциплины
                 th.table-scroll__title Учебный год
                 th.table-scroll__title Оценка
-                th.table-scroll__title Письменная работа
+                th.table-scroll__title.no-print Письменная работа
         tbody.body-half-screen
             tr
                 td(colspan='4').table-scroll__divider 1 семестр
@@ -13,55 +13,55 @@ mixin table
                 td.table-scroll__cell Музыкально-исполнительские школы и концепции
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Хорошо
-                td.table-scroll__cell Отсутствует
+                td.table-scroll__cell.no-print Отсутствует
             tr
                 td.table-scroll__cell Иностранный язык
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Зачтено
-                td.table-scroll__cell: a(href="#") Открыть
+                td.table-scroll__cell.no-print: a(href="#") Открыть
             tr
-                td(colspan='4').table-scroll__divider 2 семестр
+                td(colspan='4').table-scroll__divider.no-print 2 семестр
             tr
                 td.table-scroll__cell Русский язык и культура речи
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Хорошо
-                td.table-scroll__cell Отсутствует
+                td.table-scroll__cell.no-print Отсутствует
             tr
                 td.table-scroll__cell Теория и история музыкального искусства
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Зачтено
-                td.table-scroll__cell: a(href="#") Открыть
+                td.table-scroll__cell.no-print: a(href="#") Открыть
             tr
-                td(colspan='4').table-scroll__divider 3 семестр
-            tr
-                td.table-scroll__cell Теория и история музыкального искусства
-                td.table-scroll__cell 1 семестр,Осенний (1 курс)
-                td.table-scroll__cell Зачтено
-                td.table-scroll__cell: a(href="#") Открыть
+                td(colspan='4').table-scroll__divider.no-print 3 семестр
             tr
                 td.table-scroll__cell Теория и история музыкального искусства
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Зачтено
-                td.table-scroll__cell: a(href="#") Открыть
+                td.table-scroll__cell.no-print: a(href="#") Открыть
+            tr
+                td.table-scroll__cell Теория и история музыкального искусства
+                td.table-scroll__cell 1 семестр,Осенний (1 курс)
+                td.table-scroll__cell Зачтено
+                td.table-scroll__cell.no-print: a(href="#") Открыть
             tr
                 td(colspan='4').table-scroll__divider 4 семестр
             tr
                 td.table-scroll__cell Теория и история музыкального искусства
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Зачтено
-                td.table-scroll__cell: a(href="#") Открыть
+                td.table-scroll__cell.no-print: a(href="#") Открыть
             tr
                 td.table-scroll__cell Теория и история музыкального искусства
                 td.table-scroll__cell 1 семестр,Осенний (1 курс)
                 td.table-scroll__cell Зачтено
-                td.table-scroll__cell: a(href="#") Открыть
+                td.table-scroll__cell.no-print: a(href="#") Открыть
 
 section.activity-work
     .activity-work__container.container
         .activity-work__header
             h2.activity-work__title.title--s Научная работа
-            span.divider
-            .activity-work__progress
+            span.divider.no-print
+            .activity-work__progress.no-print
                 .progress
                     .progress-bar(data-progress='45')
                 .progress-info
