--- a/src/pug/sections/_similar-profiles.pug
+++ b/src/pug/sections/_similar-profiles.pug
@@ -1,4 +1,4 @@
-section.portfolio-cards.similar-profiles
+section.portfolio-cards.similar-profiles.no-print
     .portfolio-cards__container.container
         .portfolio-cards__header
             h2.portfolio-cards__title.title--large Похожие профили
