--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -3,7 +3,7 @@ $c-black: #444444;
 $c-title: #6E7781;
 $c-blue: #3464e0;
 $c-blue-background: linear-gradient(90deg, #3464e0 0%, #2955c9 100%);
-$c-blue: rgba(52, 100, 224, 1);
+$c-blue: rgb(52, 100, 224);
 $c-link: #9cbaf0;
 $c-grey: #f1f4f9;
 $c-darkgrey: #c3cad6;
