--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,8 @@
 @import "general/cookie";
 @import "general/tabs";
 @import "blocks/block-content";
+@import "general/tooltips";
+@import "blocks/accordeon";
 
 //global
 @import "blocks/page-header";
@@ -59,7 +61,6 @@
 @import "blocks/international-work";
 @import "blocks/progress-bar";
 @import "blocks/table";
-@import "blocks/accordeon";
 @import "blocks/similar-profiles";
 
 //vacancy
