--- a/src/pug/sections/_portfolio--middle-score.pug
+++ b/src/pug/sections/_portfolio--middle-score.pug
@@ -1,4 +1,4 @@
-section.portfolio
+section.portfolio.no-print
     .portfolio__container.card--stack
         h2.portfolio__title.title Средний балл
         .portfolio__wrapper
