--- a/src/scss/blocks/_activities.scss
+++ b/src/scss/blocks/_activities.scss
@@ -1,22 +1,48 @@
 .activities__list {
-  @include list-reset;
-  display: flex;
-  margin-right: 21px;
+    @include list-reset;
+    display: flex;
+    margin-right: 11px;
+    justify-content: space-between;
+    min-width: 134px;
+    align-items: center;
 }
 
 .activities__link {
-  display: block;
-  &--youtube {
-    font-size: 0;
+    display: block;
     width: 36px;
     height: 36px;
-    border: 1px solid #E06364;
-    box-sizing: border-box;
+    border: 1px solid $c-darkgrey;
     border-radius: 50%;
-    background-size: 50%;
+    box-sizing: border-box;
     padding: 17px;
     position: relative;
-    background: url("../img/icons/yt-red.svg") no-repeat center;
-    background-size: 18px;
-  }
+    transition: .2s;
+    svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        fill: $c-darkgrey;
+    }
+    &:hover:not(.activities__link--youtube) {
+        background: $c-blue;
+        border: none;
+        svg {
+            fill: $c-light;
+        }
+    }
+    &--achievements {
+
+    }
+    &--print {
+        @include btn-reset;
+        border: 1px solid $c-darkgrey;
+    }
+    &--youtube {
+        font-size: 0;
+        border: 1px solid #e06364;
+        background-size: 50%;
+        background: url("../img/icons/yt-red.svg") no-repeat center;
+        background-size: 18px;
+    }
 }
