Сделал тултип для меню, слайд для футера, реализовал баттоны в локалсторадж

--- a/src/pug/layouts/_two-columns.pug
+++ b/src/pug/layouts/_two-columns.pug
@@ -39,7 +39,7 @@ html(lang="ru")
                                                 svg(width='36' height='36')
                                                     use(href="#dashboard")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link.dashboard__menu-link--short(href='profile-settings.html') Редактировать профиль
+                                            a.dashboard__menu-link.dashboard__menu-link--short(href='profile-settings.html' data-tooltip="Редактировать профиль" data-flow="right") Редактировать профиль
                                                 svg(width='36' height='36')
                                                     use(href="#profile")
                                         li.dashboard__menu-item
