--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,5 +1,5 @@
-footer.footer.no-print
-    .footer__container.container
+footer.footer.no-print#footer
+    .footer__container.container.visually-hidden
         .footer__section
             h2.footer__section-title.title Контакты
             ul.footer__contacts-list.footer__list
