--- a/src/pug/sections/dashboard/_dashboard-vacancy.pug
+++ b/src/pug/sections/dashboard/_dashboard-vacancy.pug
@@ -31,7 +31,7 @@ section.vacancy.dashboard__vacancy
     .vacancy__container.container
         .vacancy__header
             h2.vacancy__title.title--large Открытые вакансии портала
-            button.vacancy__filter-button.btn.btn--regular.js-filter-btn Фильтры
+            button.vacancy__filter-button.btn.btn--regular.js-filter-btn(data-persist) Фильтры
                 svg(width="22" height="22" aria-label="Кнопка открытия меню фильтрации вакансий")
                     use(href="#controls")
             .vacancy__filter
