Поправил табы на индексе, убрал лишний слайдер, добавил тултипы

--- a/src/scss/blocks/_portfolio-tabs.scss
+++ b/src/scss/blocks/_portfolio-tabs.scss
@@ -97,6 +97,9 @@
             color: #fff;
         }
     }
+    @media (max-width: 446px) {
+        white-space: break-spaces;
+    }
     @media (min-width: $tablet) {
         max-width: 398px;
     }
