--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -83,7 +83,7 @@
         top: 0;
         left: 0;
         width: 54px;
-        background-color: #f8fafe;
+        background-color: #f1f4f9;
         .toggler-element {
             left: 15px;
             &::before,
