--- a/src/scss/blocks/_portfolio.scss
+++ b/src/scss/blocks/_portfolio.scss
@@ -6,6 +6,11 @@
     }
 }
 
+.portfolio__wrapper {
+
+    padding-bottom: 70px;
+}
+
 .portfolio__container {
     background-color: #fff;
     position: relative;
@@ -20,34 +25,40 @@
     }
 }
 
-.gauge {
+.gauge{
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     position: relative;
-    justify-content: center;
-    padding-bottom: 70px;
-    width: 100%;
+    width: 236px;
+    margin: 0 auto;
+}
+
+.gauge svg:not(:last-child){
+    margin: 0 20px 20px 0;
+}
+
+.gauge svg{
+    width: 236px;
+    margin-top: 5px;
+}
+
+.unfilled{
+    stroke: #EBEDF8;
 }
 
 .gauge__value {
+    font-size: 40px;
     position: absolute;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 26px;
-    top: 80px;
     left: 50%;
-    transform: translateX(-50%);
-    &::after {
-        content: "%";
-    }
+    top: 50%;
+    transform: translate(-50%,0);
 }
 
-.gauge {
-    &--score {
-        .gauge__value {
-            &::after {
-                content: "";
-            }
-        }
-    }
+.gauge__value::after {
+    content: '%';
+}
+
+.gauge--score .gauge__value::after {
+    content: '';
 }
