--- a/src/pug/sections/_services.pug
+++ b/src/pug/sections/_services.pug
@@ -1,7 +1,7 @@
 section.services
     .services__container.swiper-container
         .services__header
-            h2.services__title.title--main Популярные услуги
+            h2.services__title.title--large Популярные услуги
             span.divider
             .services__navigation.services__navigation--desktop
                 .swiper-button-prev.services-button-prev
