Сделал фон Градиентом

--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     z-index: 10;
-    background: #3464e0;
+    background: $c-blue-background;
     margin-bottom: 24px;
     @media (max-width: $mobile) {
     }
